# vk-parse-api

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: __main__.py  deps.py  endpoints.py  models.py  routers.py  schemas.py  settings.py
tests/: test_endpoints.py
