[tool.poetry]
name = "lab5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
pytest = "^8.3.3"
neomodel = "^5.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
